# BastidoresGAL

./: MapaClientes.svelte  RELEASE_GUIDE.md  geocodificar_clientes.py  index.html  invoice_template.html  invoice_template_2.html  invoice_template_3.html  mapa_endpoints.py  package-lock.json  package.json  pubkey.b64  sig.b64  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
public/: whatsapp-helper.html
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  pdf.rs  print_agent.rs
src/lib/api/: client.ts
src/lib/components/: AddressAutocomplete.svelte  Bastidor.svelte  EditClienteModal.svelte  FusionarClientesModal.svelte  InvoicePrintModal.svelte  MoldurasModal.svelte  MoldurasReorderModal.svelte  PagoDialog.svelte  PanelProgramarViajes.svelte  PreciosReferenciaModal.svelte  PriceListModal.svelte  PricingRulesModal.svelte  RecomendacionRutasModal.svelte  SettingsModal.svelte  TitleBar.svelte  Toast.svelte  UpdateAnnouncement.svelte
src/lib/data/: changelog.ts
src/lib/screens/: AnalisisUSD.svelte  Caja.svelte  Clientes.svelte  Dashboard.svelte  Estadisticas.svelte  Facturacion.svelte  FichaSemanal.svelte  GastoRapido.svelte  Gastos.svelte  Kanban.svelte  Login.svelte  MapaClientes.svelte  Molduras.svelte  PanelControl.svelte  Papelera.svelte  PrintAgent.svelte  Produccion.svelte  Productos.svelte  RevisionComprobantes.svelte  Splash.svelte
src/lib/stores/: appStore.svelte.ts  cacheStore.svelte.ts  (+1 more)
~/.tauri/: galv2.key  galv2.key.pub
(+13 files in other folders)
