[package]
name = "bastidores-gal"
version = "2.1.0"
description = "Bastidores GAL - Gestion empresarial"
authors = ["FacBal"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
enigo = "0.2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
dirs = "6"
chrono = "0.4"
dunce = "1.0"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }
